inclusão projeto a ser testado